# Grammar-Mutator

./: .clang-format  .custom-format.py  .gitignore  CMakeLists.txt  CMakeOptions.txt  GNUmakefile  LICENSE  Makefile  README.md
.github/workflows/: main.yml  setup-deps.sh
doc/: TODO.md  building-grammar-mutator.md  customizing-grammars.md  sample-fuzzing-targets.md
examples/: .gitignore  f1_c_gen.py  test_grammar.json
examples/Ruby/: .gitignore
examples/Ruby/in/: hello.rb
grammars/: .gitignore  README.md  f1_c_gen.py  f1_common.py  f1_g4_translate.py  http.json  javascript.json  json.json  json_grammar.json  json_grammar_no_ws.json  nautilus_py_grammar_to_json.py  ruby.json  ruby_grammar.json  test.json  test_hex.json  wrong_hex.json
include/: chunk_store.h  common.h  custom_mutator.h  f1_c_fuzz.h  hash.h  helpers.h  json_c_fuzz.h  list.h  mutator.h  parsing_tree.h  tree.h  tree_mutation.h  tree_trimming.h  utils.h
lib/: CMakeLists.txt  Makefile
lib/antlr4_shim/: CMakeLists.txt  Makefile  antlr4_shim.cpp  antlr4_shim.h
src/: .gitignore  CMakeLists.txt  Makefile  chunk_store.c  chunk_store.cpp  chunk_store_internal.h  f1_c_fuzz.c  f1_c_gen.py  grammar_generator.c  grammar_mutator.c  grammar_mutator.cpp  hash.c  json_c_fuzz.c  json_custom_mutator.c  json_custom_mutator.cpp  list.c  mutator.c  parsing_tree.c  tree.c  tree_mutation.c  tree_trimming.c  utils.c
src/benchmark/: CMakeLists.txt  benchmark.c  benchmark.h
test/: CMakeLists.txt  Makefile  test_chunk_store.cpp  test_custom_mutator.c  test_custom_mutator.cpp  test_list.cpp  test_parsing_tree.c  test_parsing_tree.cpp  test_tree.cpp  test_tree_mutation.cpp  test_tree_trimming.cpp
test/googletest-download/: CMakeLists.txt.in
tests/: .gitignore  CMakeLists.txt  Makefile  gtest_ext.h  test_barrust_set.cpp  test_chunk_store.cpp  test_custom_mutator.cpp  test_list.cpp  test_rxi_map.cpp  test_tree.cpp  test_tree_mutation.cpp  test_tree_trimming.cpp
tests/googletest-download/: CMakeLists.txt.in  Makefile
tests/json-parser-download/: .gitignore  CMakeLists.txt.in  Makefile
